# dimension

./: .Dimension.cabal.swp  .gitignore  Dimension.cabal  LICENSE  README.md
src/Dimension/: Data.hs  Fakefile.txt  Match.hs  Order.hs  TypeLevelInt.hs  Units.hs
src/Dimension/Ordered/: Units.hs
src/Dimension/Polymorphic/: Parser.hs
src/Dimensions/: CommonIsos.hs  Data.hs  DimensionalMisc.hs  GetTermLevel.hs  Match.hs  Metric.hs  Order.hs  ParseMisc.hs  Parser.hs  Prefix.hs  Printer.hs  TypeLevelInt.hs  TypeMisc.hs  Units.hs
src/Dimensions/Ordered/: Order.hs  Units.hs
src/Dimensions/Polymorphic/: ParseMisc.hs
test/: Main.hs  TypeLevelTests.hs
