cabal-version:      3.0
name:               Dimension
version:            0.1

-- A short (one-line) description of the package.
synopsis: Extensible typed Dimensions

-- A longer description of the package.
description:
    A package with statically typed dimensions that is more extensible than /Dimensional/ and simpler than /units/ Skip to the README for details.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ashok Kimmel
maintainer:         ashok.kimmel@gmail.com
copyright: Ashok Kimmel 2025-2026
category:           Math,Physics
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:
    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
extra-source-files:
    README.md
source-repository head
    type:     git
    location: https://github.com/ashokkimmel/dimension/

common warnings
    ghc-options: -Weverything -Wno-implicit-prelude -Wno-operator-whitespace -Wno-prepositive-qualified-module -Wno-missing-local-signatures
-- the _compileParsedExpr bug is the reason for the missing local signatures suppression

library
    -- Import common warning flags.
    import:           warnings

    -- Modules exported by the library.
    exposed-modules: 
         Dimensions.CommonIsos
       , Dimensions.DimensionalMisc
       , Dimensions.GetTermLevel
       , Dimensions.Order
       , Dimensions.Units
       , Dimensions.ParseMisc
       , Dimensions.Parser
       , Dimensions.Printer
       , Dimensions.TypeLevelInt
       , Dimensions.TypeMisc
       , Dimensions.Data
       , Dimensions.Metric
       , Dimensions.Match
        
    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
        

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.21


    -- Directories containing source files.
    hs-source-dirs:   src

    -- Base language which the package is written in.
    default-language: Haskell2010

test-suite Dimension-test
    -- Import common warning flags.
    import:        

    -- Base language which the package is written in.
    default-language: Haskell2010

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:   test

    -- The entrypoint to the test suite.
    main-is:          Main.hs

    -- Test dependencies.
    build-depends:
        base ^>=4.21,
        Dimension

